# erdos-experiments

./: .gitignore  EXP_DISS_KVN_001.py  EXP_DISS_KVN_001_refined.py  Erdos1051_proof.md  Erdos1051_skeleton.lean  FEYNMAN_TEST_755_166_2026-04-16.md  README.md  SCALING_COMPARISON_2026-04-16.json
EHP114/: EHP114.lean  EHP_n5.lean  lake-manifest.json  lakefile.toml
Erdos1120/: erdos1120_feynman.py  erdos1120_hammer.py  erdos1120_hard.py  erdos1120_paper.tex  erdos1120_proof.py  erdos1120_proof2.py  erdos1120_shadow.py  erdos1120_verify.py
Erdos166/: EXP-MATH-ERDOS166-SUMFREE-001_RESULTS.json  sumfree_tm  sumfree_transfer_matrix.cpp
scripts/erdos-1038-tao-ansatz/: Cargo.toml
scripts/erdos-1038-tao-ansatz/src/: main.rs
scripts/erdos-114/: Cargo.toml  EXP-MM-EHP-007-n15-inari_RESULTS.json  EXP-MM-EHP-007-n15-inari_RESULTS.sha256  EXP-MM-EHP-007-n16-inari_RESULTS.json  EXP-MM-EHP-007-n3-inari_RESULTS.json  EXP-MM-EHP-007-n3-inari_RESULTS.sha256  EXP-MM-EHP-007-n4-inari_RESULTS.json  EXP-MM-EHP-007-n4-inari_RESULTS.sha256  EXP-MM-EHP-007-n5-inari_RESULTS.json  EXP-MM-EHP-007-n5-inari_RESULTS.sha256  EXP-MM-EHP-007-n6-inari_RESULTS.json  EXP-MM-EHP-007-n6-inari_RESULTS.sha256  EXP-MM-EHP-007-n7-inari_RESULTS.json  EXP-MM-EHP-007-n7-inari_RESULTS.sha256  EXP-MM-EHP-007-n8-inari_RESULTS.json  EXP-MM-EHP-007-n8-inari_RESULTS.sha256  README.md  verify_formula.py
scripts/erdos-114/archive/exploratory_2026-03-27/: EXP-MM-EHP-007-n14-inari_RESULTS.json  EXP-MM-EHP-007-n14-inari_RESULTS.sha256  EXP-MM-EHP-007-n16-inari_RESULTS.sha256  README.md
scripts/erdos-114/src/: main.rs
(+307 files in other folders)
