[package]
name = "tao_ansatz_verifier"
version = "0.1.0"
edition = "2021"
description = "IEEE 1788 interval-arithmetic certification of Tao's dual measure ansatz (Erdos Problem #1038)"
authors = ["Kenneth A. Mendoza <kenmendoza@me.com>"]

[dependencies]
inari = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha256 = "1"
minilp = "0.2"

[profile.release]
opt-level = 3
lto = true
